Fix alignment issues and forms

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,11 +1,10 @@
 @import "./styles/Constants";
 
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  
 }
 
 .logo {
