--- a/ui/src/components/Admin/ListPendingSightings.scss
+++ b/ui/src/components/Admin/ListPendingSightings.scss
@@ -12,7 +12,6 @@ width: 100%;
 }
 
 .pending-list-container {
-    width: 100vw;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -21,7 +20,8 @@ width: 100%;
 
 .sighting-container {
     max-width: 100%;
-     overflow-x: auto;
+    overflow-x: auto;
+    padding: 10px 40px;
 }
 
 .pending-sightings-table {
@@ -44,7 +44,7 @@ th {
     border: 1pt solid $tealBackground;
 }
 
-td {
+.pending-sightings-table td {
     border: 1pt solid #e6faf9;
     background-color: #e6faf9;
     padding: 5px 5px 5px 0;
