--- a/ui/src/pages/Login/LoginPage.scss
+++ b/ui/src/pages/Login/LoginPage.scss
@@ -5,9 +5,16 @@
 }
 
 .login-page {
-    background-color: $whiteBackground;
+    background-color: white;
     border-radius: 20px;
     padding: 10px;
+    width: 50%;
+    margin: 32px auto;
+}
+
+.login-form {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .label-text{
@@ -18,7 +25,6 @@ button {
     @include primaryButton;
     display:flex;
     margin-top: 10px;
-    width: fit-content;
     padding: 10px 10px;
     margin-left: 5px;
 }
